Buggy Helvetica Dark Mode

--- a/app/static/styles/dark-storystyle.css
+++ b/app/static/styles/dark-storystyle.css
@@ -6,6 +6,7 @@ html, body {
   width: 100%;
   height: 100%;
   min-height: 100%;
+  font-family: "Helvetica", Helvetica, serif;
 }
 
 #body-div {
@@ -14,12 +15,12 @@ html, body {
 
 #delete-button {
   background-color: midnightblue;
-  color: white;
+  color: pink;
 }
 
 #header-div {
   width: 100%;
-  background-color: midnightblue;
+  /* background-color: midnightblue; */
   color: white;
 }
 
@@ -27,7 +28,8 @@ html, body {
   position: relative;
   padding-top: 8px;
   left: 1%;
-  background-color: midnightblue;
+  /* background-color: midnightblue; */
+  display: inline;
 }
 
 #body-div {
@@ -108,4 +110,73 @@ html, body {
 
 #done-col .story:hover {
   background-color: rgba(0, 255, 0, 0.2);
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 36px;
+  height: 21px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(14px);
+  -ms-transform: translateX(14px);
+  transform: translateX(14px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 30px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#darkmodebutton {
+  vertical-align: middle;
+  height: 5px;
+  display: inline;
 }
